[hotfix] fix z-index

--- a/src/components/search/style.scss
+++ b/src/components/search/style.scss
@@ -1,10 +1,10 @@
 .search-container {
-
   width: 100%;
   height: 450px;
   display: flex;
   justify-content: center;
   align-items: center;
+
   .search-section {
     background-color: white;
     width: 70%;
@@ -28,7 +28,7 @@
         color: black;
 
         &.active {
-          border-bottom: 1px solid #1576dd;
+          border-bottom: 1px solid #1891ff;
         }
         .type-icon {
           font-size: 2em;
